--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
         <header>
+             <title> blablabla </title>
             <a href="#price">Прайс-лист</a> <a href="#reviews">Відгуки</a> <a href="#photos">Фотографії</a>
             <link rel="stylesheet" href="style.css"
         </header>
